# mini_auv_sim

./: .gitignore  CMakeLists.txt  README.md  mini_auv_run  setup.sh  todos.txt
media/materials/scripts/: pool.material  water.material
mini_auv_control/: CMakeLists.txt
mini_auv_control/src/: MainPicoControl.cc  PIDControl.cc  PIDControl.hh  PIDController6DOF.cc  PIDController6DOF.hh  PIDController6DOF_TEST.cc  PicoPIDController.cc  PicoPIDController.hh
mini_auv_gazebo_msgs/: CMakeLists.txt
mini_auv_gazebo_msgs/msgs/: Double.proto  ThrustCmd.proto
mini_auv_gazebo_plugins/: BasicESC.cc  BasicESC.hh  CMakeLists.txt  DepthSensorPlugin.cc  DepthSensorPlugin.hh  MaestroEmulator.cc  MaestroEmulator.hh  PicoSensorHubEmulator.cc  PicoSensorHubEmulator.hh  ThrusterPlugin.cc  ThrusterPluginTEST.cc
mini_auv_gazebo_plugins/include/: Serial.h
models/gate/: gate.blend  gate.dae  model.config  model.sdf
models/ocean_box/: model.config  model.sdf
models/pico/: model.config  model.sdf  model_2.sdf
models/pool_1/: model.config  model.sdf
scripts/: launch_pico_virtual_serial_ports  launch_virtual_ports  maestro_emulator_test.py  model_param_calcs.py  ser_write_test.py  serial_sensor_com_test.py
worlds/: empty_underwater.world  pool_testing.world  underwater_heightmap.world
